added second invalid conjecture about random testing
current results from refute.rkt script:

jscontest conjecture redex
0 failures
1000 successes
148.422 average attempts for each success

jscontest conjecture quickcheck
....................
401 failures
599 successes
403.52587646076796 average attempts for each success

isabelle conjecture redex
0 failures
1000 successes
5.017 average attempts for each success

isabelle conjecture quickcheck
....................
0 failures
1000 successes
3.62 average attempts for each success

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@ paper.pdf
 *.html
 *.js
 pict.png
-isabelle-authors-conjecture
+refute/isabelle-authors-conjecture
+refute/isabelle-authors-conjecture.hi
+refute/isabelle-authors-conjecture.o
+refute/jscontest-authors-conjecture
+refute/jscontest-authors-conjecture.hi
+refute/jscontest-authors-conjecture.o
 compiled/
