--- a/model/Makefile
+++ b/model/Makefile
@@ -1,5 +1,5 @@
 MODULES := Bijection Enum Fairness Pairing Sets Trace Util All
-VS      := $(MODULES:%=Enum/%.v)
+VS      := $(MODULES:%=coq/%.v)
 
 .PHONY: coq clean
 
@@ -7,7 +7,7 @@ coq: Makefile.coq
 	$(MAKE) -f Makefile.coq
 
 Makefile.coq: Makefile $(VS)
-	coq_makefile -R Enum Enum $(VS) -o Makefile.coq
+	coq_makefile -R coq Enum $(VS) -o Makefile.coq
 
 clean:: Makefile.coq
 	$(MAKE) -f Makefile.coq clean
