progress on characterization of traces of y component of unfair pair
got it down to some tested lemmas....

--- a/model/Makefile
+++ b/model/Makefile
@@ -1,4 +1,4 @@
-MODULES := Bijection Enum Fairness Pairing Sets Trace Util All
+MODULES := Bijection Enum Fairness Pairing UnfairPairing Sets Trace Util EvenOddPow All
 VS      := $(MODULES:%=coq/%.v)
 
 .PHONY: coq clean
