update supplementary material readme and build script

--- a/model/Makefile
+++ b/model/Makefile
@@ -3,6 +3,14 @@ VS      := $(MODULES:%=coq/%.v)
 
 .PHONY: coq clean
 
+test: Makefile.coq
+	$(MAKE) -f Makefile.coq
+	raco make -v redex-model.rkt redex-model-test.rkt \
+                     redex-model-typesetting.rkt run-coq-redex-tests.rkt
+	raco test redex-model-test.rkt
+	raco test run-coq-redex-tests.rkt
+
+
 coq: Makefile.coq
 	$(MAKE) -f Makefile.coq
 
