update for new supplementary material setup

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,5 @@ compiled/
 *.glob
 lia.cache
 nlia.cache
-supp/Makefile
-supp/model/
-./supp.tar.gz
+fair-enumerations-supplementary-material.tar.gz
+supp/
